modify spi pins for sitara

--- a/experimental_ble_app_blinky/Makefile
+++ b/experimental_ble_app_blinky/Makefile
@@ -2,7 +2,7 @@ PROJECT_NAME     := experimental_ble_app_blinky_sitara_s140
 TARGETS          := nrf52840_xxaa
 OUTPUT_DIRECTORY := _build
 
-SDK_ROOT := ../../SDK
+SDK_ROOT := ../../nRF_SDK_13_0_0
 PROJ_DIR := ./
 
 $(OUTPUT_DIRECTORY)/nrf52840_xxaa.out: \
@@ -150,6 +150,7 @@ LIB_FILES += \
 # C flags common to all targets
 CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -DBOARD_SITARA
+# CFLAGS += -DBOARD_PCA10056
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
 CFLAGS += -DNRF52840_XXAA
 CFLAGS += -DNRF_SD_BLE_API_VERSION=5
@@ -171,6 +172,7 @@ CXXFLAGS += \
 ASMFLAGS += -x assembler-with-cpp
 ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
 ASMFLAGS += -DBOARD_SITARA
+# ASMFLAGS += -DBOARD_PCA10056
 ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
 ASMFLAGS += -DNRF52840_XXAA
 ASMFLAGS += -DNRF_SD_BLE_API_VERSION=5
