--- a/sitaraCC1200/Makefile
+++ b/sitaraCC1200/Makefile
@@ -2,7 +2,7 @@ PROJECT_NAME     := spi_sitara
 TARGETS          := nrf52840_xxaa
 OUTPUT_DIRECTORY := _build
 
-SDK_ROOT := ../../SDK
+SDK_ROOT := ../../nRF_SDK_13_0_0
 PROJ_DIR := ./
 
 $(OUTPUT_DIRECTORY)/nrf52840_xxaa.out: \
@@ -66,8 +66,8 @@ INC_FOLDERS += \
 LIB_FILES += \
 
 # C flags common to all targets
-# CFLAGS += -DBOARD_SITARA
-CFLAGS += -DBOARD_PCA10056
+CFLAGS += -DBOARD_SITARA
+# CFLAGS += -DBOARD_PCA10056
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
 CFLAGS += -DNRF52840_XXAA
 CFLAGS += -DSWI_DISABLE0
@@ -84,8 +84,8 @@ CXXFLAGS += \
 
 # Assembler flags common to all targets
 ASMFLAGS += -x assembler-with-cpp
-# ASMFLAGS += -DBOARD_SITARA
-ASMFLAGS += -DBOARD_PCA10056
+ASMFLAGS += -DBOARD_SITARA
+# ASMFLAGS += -DBOARD_PCA10056
 ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
 ASMFLAGS += -DNRF52840_XXAA
 ASMFLAGS += -DSWI_DISABLE0
