--- a/sitaraCC1200subDB/Makefile
+++ b/sitaraCC1200subDB/Makefile
@@ -73,12 +73,13 @@ CFLAGS += -DNRF52840_XXAA
 CFLAGS += -DSWI_DISABLE0
 CFLAGS += -mcpu=cortex-m4
 CFLAGS += -mthumb -mabi=aapcs
-CFLAGS +=  -Wall -Werror -O3 -g3
+CFLAGS += -Wall -O3 -g3
+# CFLAGS += -Werror
 CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
 # keep every function in separate section, this allows linker to discard unused ones
 CFLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
 CFLAGS += -fno-builtin --short-enums 
-# CFLAGS += -DRX_MODE
+CFLAGS += -DRX_MODE
 # C++ flags common to all targets
 CXXFLAGS += \
 
